--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-
+<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,36 +20,44 @@
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script><![endif]-->
+
+        <script
+                src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+                integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+                crossorigin="anonymous">
+        </script>
+
     </head>
 
     <body>
         <nav class="navbar navbar-light navbar-fixed-top" style="background-color: #e3f2fd;" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">To Do List app</a>
-
+                    <a class="navbar-brand" href="{{ path('homepage') }}">To Do List app</a>
                     <img src="{{ asset('img/Logo_OpenClassrooms.png') }}" alt="OpenClassrooms" />
+                </div>
+                <div class="collapse navbar-collapse" id="navbar">
+                    <ul class="navbar">
+                            <li class="nav-item">
+                                {% if is_granted("ROLE_ADMIN") %}
+                                <a class="nav-link" href="{{ path('user_create') }}" }}>Créer un utilisateur</a>
+                                {% endif %}
+                            </li>
+                        {% if app.user %}
+                            <a href="{{ path('app_logout') }}" class="pull-right btn btn-danger">Se déconnecter</a>
+                        {% endif %}
+
+                        {% if not app.user and 'login' != app.request.attributes.get('_route') %}
+                            <a href="{{ path('app_login') }}" class="btn btn-success">Se connecter</a>
+                        {% endif %}
+                    </ul>
                 </div>
             </div>
         </nav>
 
         <!-- Page Content -->
         <div class="container">
-            <div class="row">
-                {% if is_granted("ROLE_ADMIN") %}
-                    <a href="{{ path('user_create') }}" class="btn btn-primary">Créer un utilisateur</a>
-                {% endif %}
-
-                {% if app.user %}
-                <a href="{{ path('app_logout') }}" class="pull-right btn btn-danger">Se déconnecter</a>
-                {% endif %}
-
-                {% if not app.user and 'login' != app.request.attributes.get('_route') %}
-                <a href="{{ path('app_login') }}" class="btn btn-success">Se connecter</a>
-                {% endif %}
-            </div>
 
             <div class="row">
                 <div class="col-md-12">
@@ -78,10 +86,10 @@
                 </div>
             </div>
         </div>
+
         <!-- /.container -->
 
         <div class="container">
-
             <hr>
             <footer>
                 <div class="row">
@@ -93,7 +101,6 @@
 
         </div>
 
-        <script src="{{ asset('js/jquery.js') }}"></script>
         <script src="{{ asset('js/bootstrap.min.js') }}"></script>
     </body>
 </html>
