--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -10,16 +10,14 @@
             <div class="thumbnail">
                 <div class="caption">
                     <h4 class="pull-right">
-                        {% if task.isDone %}<span class="glyphicon glyphicon-ok"></span>{% else %}<span class="glyphicon glyphicon-remove"></span>{% endif %}
+                        <span class="glyphicon glyphicon-remove"></span>
                     </h4>
                     <h4><a href="{{ path('task_edit', {'slug' : task.slug }) }}">{{ task.title }}</a></h4>
                     <p>{{ task.content }}</p>
                 </div>
                 <div>
                     <form action="{{ path('task_toggle', {'slug' : task.slug }) }}">
-                        <button class="btn btn-success btn-sm pull-right">
-                            {% if not task.isDone %}Marquer comme faite{% else %}Marquer non terminée{% endif %}
-                        </button>
+                        <button class="btn btn-success btn-sm pull-right">Marquer comme faite</button>
                     </form>
                     <form action="{{ path('task_delete', {'slug' : task.slug }) }}">
                         <button class="btn btn-danger btn-sm pull-right">Supprimer</button>
