--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -19,9 +19,11 @@
                     <form action="{{ path('task_toggle', {'slug' : task.slug }) }}">
                         <button class="btn btn-success btn-sm pull-right">Marquer comme faite</button>
                     </form>
+                    {% if app.user is same as task.users %}
                     <form action="{{ path('task_delete', {'slug' : task.slug }) }}">
                         <button class="btn btn-danger btn-sm pull-right">Supprimer</button>
                     </form>
+                    {% endif %}
                 </div>
             </div>
         </div>
