--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <html>
     <head>
         <meta charset="utf-8">
@@ -41,7 +41,8 @@
                     <ul class="navbar">
                             <li class="nav-item">
                                 {% if is_granted("ROLE_ADMIN") %}
-                                <a class="nav-link" href="{{ path('user_create') }}" }}>Créer un utilisateur</a>
+                                    <a class="nav-link" href="{{ path('user_create') }}" }}>Créer un utilisateur</a>
+                                    <a class="nav-link" href="{{ path('user_list') }}" }}>Liste des utilisateurs</a>
                                 {% endif %}
                             </li>
                         {% if app.user %}
