--- a/templates/task/listCompleted.html.twig
+++ b/templates/task/listCompleted.html.twig
@@ -15,15 +15,18 @@
                             <span class="glyphicon glyphicon-ok"></span>
                         </h4>
                         <h4><a href="{{ path('task_edit', {'slug' : task.slug }) }}">{{ task.title }}</a></h4>
+                        <p class="text-blue">Créée par {{ task.users.username }}, le {{ task.createdAt|date("d/m/Y à H:i:s") }} </p>
                         <p>{{ task.content }}</p>
                     </div>
                     <div>
                         <form action="{{ path('task_toggle', {'slug' : task.slug }) }}">
                             <button class="btn btn-success btn-sm pull-right">Marquer non terminée</button>
                         </form>
+                        {% if app.user is same as task.users %}
                         <form action="{{ path('task_delete', {'slug' : task.slug }) }}">
                             <button class="btn btn-danger btn-sm pull-right">Supprimer</button>
                         </form>
+                        {% endif %}
                     </div>
                 </div>
             </div>
