--- a/public/css/shop-homepage.css
+++ b/public/css/shop-homepage.css
@@ -4,8 +4,31 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 
-  body {
-    padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+/* Main style*/
+li {
+    list-style: none;
+}
+
+.back-link {
+    margin-bottom: 10px;
+}
+
+/*Navbar style*/
+.navbar {
+    background-color: #e3f2fd;
+    margin-bottom: 10px;
+  }
+
+.nav-link {
+    color:#22252a;
+}
+
+.nav-link:hover {
+    color:#43D2F2;
+}
+
+.navbar-toggler {
+    color: #22252a;
 }
 
 .slide-image {
@@ -53,6 +76,10 @@ footer {
     margin: 50px 0;
 }
 
+/*form style*/
+.btn-form {
+    margin: 5px 0px;
+}
 .btn {
-    margin-bottom: 5px;
+    margin-bottom: 15px;
 }
