--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -6,9 +6,15 @@
 
 {% block body %}
 
-    <div class="row">
-        <a href="{{ path('task_create') }}" class="btn btn-success">Créer une nouvelle tâche</a>
-        <a href="{{ path('task_list') }}" class="btn btn-info">Consulter la liste des tâches à faire</a>
-        <a href="{{ path('task_completed') }}" class="btn btn-secondary">Consulter la liste des tâches terminées</a>
+    <div class="d-grid cols-lg-3 cols-sm-1 mx-auto">
+        <div class="col-12">
+            <a href="{{ path('task_create') }}" class="btn btn-success">Créer une nouvelle tâche</a>
+        </div>
+        <div class="col">
+            <a href="{{ path('task_list') }}" class="btn btn-info">Consulter la liste des tâches à faire</a>
+        </div>
+        <div class="col">
+            <a href="{{ path('task_completed') }}" class="btn btn-outline-secondary">Consulter la liste des tâches terminées</a>
+        </div>
     </div>
 {% endblock %}
