--- a/templates/task/create.html.twig
+++ b/templates/task/create.html.twig
@@ -1,13 +1,16 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <div class="back-link">
+        <a href={{ path('task_list') }}>Retour à la liste des tâches</a></li>
+    </div>
+
     <div class="row">
         {{ form_start(form, {'action' : path('task_create')}) }}
             {{ form_widget(form) }}
 
-            <button type="submit" class="btn btn-success pull-right">Ajouter</button>
+            <button type="submit" class="btn btn-success pull-right btn-form">Ajouter</button>
         {{ form_end(form) }}
 
-        <a href="{{ path('task_list') }}" class="btn btn-primary">Retour à la liste des tâches</a>
     </div>
 {% endblock %}
