--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -4,36 +4,41 @@
 
 {% block body %}
     <div class="row">
-        <a href="{{ path('task_create') }}" class="btn btn-info pull-right">Créer une tâche</a>
+        <div class="col-4">
+            <a href="{{ path('task_create') }}" class="btn btn-info">Créer une nouvelle tâche</a>
+        </div>
+        <div class="col-4 offset-md-4">
+            <a href="{{ path('task_completed') }}">Consulter la liste des tâches terminées</a>
+        </div>
     </div>
-    <div class="row">
+    <div class="row row-cols-3 row-cols-sm-1 g-3">
         {% for task in tasks %}
-        <div class="col-sm-4 col-lg-4 col-md-4">
-            <div class="thumbnail">
-                <div class="caption">
-                    <h4 class="pull-right">
-                        <span class="glyphicon glyphicon-remove"></span>
-                    </h4>
-                    <h4><a href="{{ path('task_edit', {'slug' : task.slug }) }}">{{ task.title }}</a></h4>
-                    <p class="text-blue">Créée par {{ task.users.username }}, le {{ task.createdAt|date("d/m/Y à H:i:s") }} </p>
-                    <p class="short-content">{{ task.content }}</p>
-                </div>
-                <div>
-                    <form action="{{ path('task_toggle', {'slug' : task.slug }) }}">
-                        <button class="btn btn-success btn-sm pull-right">Marquer comme faite</button>
-                    </form>
-                    {% if app.user is same as task.users %}
-                    <form action="{{ path('task_delete', {'slug' : task.slug }) }}">
-                        <button class="btn btn-danger btn-sm pull-right">Supprimer</button>
-                    </form>
-                    {% endif %}
+            <div class="col">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h2 class="task-list-title"><a href="{{ path('task_edit', {'slug' : task.slug }) }}">{{ task.title }}</a></h2>
+                        <div class="row">
+                            <div class="col text-start">
+                                <p class="text-muted">Créée par {{ task.users.username }}, le {{ task.createdAt|date("d/m/Y à H:i:s") }} </p>
+                            </div>
+                            <div class="col icons text-end">
+                                    <a href="{{ path('task_toggle', {'slug' : task.slug }) }}"
+                                        class="btn btn-success btn-sm pull-right">Marquer comme faite</a>
+                                {% if app.user is same as task.users %}
+                                    <a href="{{ path('task_delete', {'slug' : task.slug }) }}" onclick="return confirm('Etes-vous sûr(e) de vouloir supprimer cette tâche?')"
+                                        class="btn btn-danger btn-sm pull-right">Supprimer</a>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
+
         {% else %}
             <div class="alert alert-warning" role="alert">
                 Il n'y a pas encore de tâche enregistrée. <a href="{{ path('task_create') }}" class="btn btn-warning pull-right">Créer une tâche</a>
             </div>
         {% endfor %}
     </div>
+
 {% endblock %}
