--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -9,7 +9,7 @@
     </div>
 
     <div class="row">
-        {{ form_start(form, {'action' : path('user_edit', {'id' : user.id})}) }}
+        {{ form_start(form, {'action' : path('user_edit', {'slug' : user.slug})}) }}
         {{ form_widget(form) }}
 
         <button type="submit" class="btn btn-success pull-right btn-form">Modifier</button>
