--- a/templates/user/list.html.twig
+++ b/templates/user/list.html.twig
@@ -29,8 +29,10 @@
                         <td>{{ user.email }}</td>
                         <td>{{ user.roles[0] }}</td>
                         <td>
-                            <a href="{{ path('user_edit', {'id' : user.id}) }}" class="btn btn-success btn-sm">Modifier</a>
-                            <a href="{{ path('user_delete', {'id' : user.id}) }}" class="btn btn-danger btn-sm">Supprimer</a>
+                            <a href="{{ path('user_edit', {'slug' : user.slug}) }}" class="btn btn-success btn-sm">Modifier</a>
+                            {% if user.roles is not same as app.user.roles %}
+                            <a href="{{ path('user_delete', {'slug' : user.slug}) }}" class="btn btn-danger btn-sm">Supprimer</a>
+                            {% endif %}
                         </td>
                     </tr>
                 {% endfor %}
